fix(table): set overflow to auto

--- a/src/scss/_components/_table/_table-elements/_build-container.scss
+++ b/src/scss/_components/_table/_table-elements/_build-container.scss
@@ -21,13 +21,13 @@
             overflow: hidden;
 
             @include element(wrapper) {
-                overflow-y: scroll;
+                overflow-y: auto;
             }
 
             // @todo: improve
             @include element(table) {
-                width: 100%;
                 position: relative;
+                width: 100%;
 
                 @include modifier(footer) {
                     border-collapse: collapse;
